--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -197,6 +197,7 @@ aside {
 .big-title{
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .second-title{
